--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jshint": "^2.9.5",
     "jshint-loader": "^0.8.4",
     "node-sass": "^4.9.2",
+    "sass": "^1.10.2",
     "sass-loader": "^7.0.3",
     "shader-loader": "^1.3.1",
     "stats.js": "^0.17.0",
@@ -51,6 +52,6 @@
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4",
-    "sass": "^1.10.2"
+    "webpack-serve": "^3.1.1"
   }
 }
