Added shader and ground. Included Glslify.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"webpack-serve --config webpack.dev --static dist/ --client.retry",
+    "start": "webpack-serve --config webpack.dev --static dist/ --client.retry",
     "start-old": "http-server ./dist -p 443 -c-1 -S -C ./c0dr_nl.pem -K ./c0dr_nl.key",
     "clean": "rm -rf dist/; mkdir -p dist",
     "buildProd": "webpack --config webpack.prod --progress --colors",
@@ -35,12 +35,19 @@
     "css-loader": "^1.0.0",
     "envify": "^4.1.0",
     "eslint": "^5.2.0",
+    "glslify-loader": "^2.0.0",
+    "glsl-aastep": "^1.0.1",
+    "glsl-noise": "^0.0.0",
+    "glsl-pi": "^1.0.0",
+    "glslify-fancy-imports": "^1.0.1",
+    "glslify-hex": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "husky": "^0.14.3",
     "jshint": "^2.9.5",
     "jshint-loader": "^0.8.4",
     "node-sass": "^4.9.2",
+    "raw-loader": "^3.1.0",
     "sass": "^1.10.2",
     "sass-loader": "^7.0.3",
     "shader-loader": "^1.3.1",
