added song playing

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "homepage": "https://github.com/sorskoot/BackToSpace#readme",
   "devDependencies": {
+    "@types/aframe": "^0.8.3",
+    "@types/three": "^0.103.2",
+    "aframe": "0.9.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
@@ -35,12 +38,12 @@
     "css-loader": "^1.0.0",
     "envify": "^4.1.0",
     "eslint": "^5.2.0",
-    "glslify-loader": "^2.0.0",
     "glsl-aastep": "^1.0.1",
     "glsl-noise": "^0.0.0",
     "glsl-pi": "^1.0.0",
     "glslify-fancy-imports": "^1.0.1",
     "glslify-hex": "^2.1.1",
+    "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "husky": "^0.14.3",
