--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-serve --config webpack.dev --static dist/ --client.retry",
-    "start-old": "http-server ./dist -p 443 -c-1 -S -C ./c0dr_nl.pem -K ./c0dr_nl.key",
+    "start-old": "http-server ./dist -c1",
     "clean": "rm -rf dist/; mkdir -p dist",
     "buildProd": "webpack --config webpack.prod --progress --colors",
     "build": "webpack --config webpack.dev --progress --colors",
@@ -65,5 +65,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4",
     "webpack-serve": "^3.1.1"
+  },
+  "dependencies": {
+    "@zestymarket/aframe-sdk": "^1.4.0"
   }
 }
