--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-serve --config webpack.dev --static dist/ --client.retry --port 1337",
+    "start": "webpack-serve --config webpack.common.js --static dist/ --client.retry --port 1337",
     "start-old": "http-server ./dist -p 1337",
     "clean": "rm -rf dist/; mkdir -p dist",
-    "buildProd": "webpack --config webpack.prod --progress --colors",
-    "build": "webpack --config webpack.dev --progress --colors",
-    "watch": "webpack --config webpack.dev --colors --watch",
+    "buildProd": "webpack --config webpack.prod --progress ",
+    "build": "webpack --config webpack.common.js --progress ",
+    "watch": "webpack --config webpack.dev.js --colors --watch",
     "zip": "cd dist; zip -r ../dist.zip .; cd ..; wc -c dist.zip",
     "package": "npm run clean && npm run build && npm run zip",
     "sass": "sass ./src/sass/root.scss ./dist/main.css",
@@ -36,7 +36,6 @@
     "babel-preset-env": "^1.7.0",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^1.0.0",
     "envify": "^4.1.0",
     "eslint": "^5.2.0",
     "glsl-aastep": "^1.0.1",
@@ -50,10 +49,7 @@
     "husky": "^0.14.3",
     "jshint": "^2.9.5",
     "jshint-loader": "^0.8.4",
-    "node-sass": "^4.9.2",
     "raw-loader": "^3.1.0",
-    "sass": "^1.10.2",
-    "sass-loader": "^7.0.3",
     "shader-loader": "^1.3.1",
     "stats.js": "^0.17.0",
     "style-loader": "^0.21.0",
@@ -61,12 +57,13 @@
     "uglify-es": "^3.3.9",
     "uglify-js-es6": "^2.8.9",
     "uglifyes-webpack-plugin": "^0.4.3",
-    "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4",
-    "webpack-serve": "^3.1.1"
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-serve": "^4.0.0"
   },
   "dependencies": {
-    "@zestymarket/aframe-sdk": "^1.4.0"
+    "@zestymarket/aframe-sdk": "^2.0.0",
+    "esbuild": "^0.17.18"
   }
 }
