--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-serve --config webpack.common.js --static dist/ --client.retry --port 1337",
     "start-old": "http-server ./dist -p 1337",
     "clean": "rm -rf dist/; mkdir -p dist",
-    "buildProd": "webpack --config webpack.prod --progress ",
+    "buildProd": "webpack --config webpack.common.js",
     "build": "webpack --config webpack.common.js --progress ",
     "watch": "webpack --config webpack.dev.js --colors --watch",
     "zip": "cd dist; zip -r ../dist.zip .; cd ..; wc -c dist.zip",
@@ -28,9 +28,6 @@
   },
   "homepage": "https://github.com/sorskoot/BackToSpace#readme",
   "devDependencies": {
-    "@types/aframe": "^0.8.3",
-    "@types/three": "^0.103.2",
-    "aframe": "0.9.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
@@ -62,7 +59,7 @@
     "webpack-merge": "^5.8.0",
     "webpack-serve": "^4.0.0"
   },
-  "dependencies": {
+  "not used dependencies": {
     "@zestymarket/aframe-sdk": "^2.0.0",
     "esbuild": "^0.17.18"
   }
