--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
             "error",
             {"selector": "enum", "format": ["PascalCase"]}
         ],
+        "@typescript-eslint/no-unsafe-member-access": "warn",
+        "@typescript-eslint/no-unsafe-call": "warn",
         "@typescript-eslint/no-inferrable-types": "error",
         "etc/no-commented-out-code": "error",
         "curly": "error"
