--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "backtospace",
-  "version": "1.9.0",
-  "description": "Entry for the 2019 Js13k Games competition",
-  "main": "js/index.js",
-  "type": "module",
-  "module": "js/index.js",
-  "moduleDirectories": [
-    "node_modules",
-    "js"
-  ],
-  "scripts": {
-    "test": "jest",
-    "build": "echo \"The 'build' script is run by the editor and should produce your application bundle\""
-  },
-  "keywords": [
-    "wonderland-engine",
-    "js13k",
-    "sorskoot"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sorskoot/BackToSpace.git"
-  },
-  "author": "Sorskoot",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sorskoot/BackToSpace/issues"
-  },
-  "homepage": "https://github.com/sorskoot/BackToSpace#readme",
-  "dependencies": {
-    "@sorskoot/wonderland-components": "1.1.6",
-    "@wonderlandengine/api": "^1.0.1",
-    "@wonderlandengine/components": "^1.0.5",
-    "@zestymarket/wonderland-sdk": "^2.0.6",
-    "gl-matrix": "^3.4.3",
-    "howler": "^2.2.3",
-    "rxjs": "^7.8.1"
-  },
-  "devDependencies": {
-    "@types/howler": "^2.2.7",
-    "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "eslint": "^8.46.0",
-    "eslint-plugin-etc": "^2.0.3",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  }
+    "name": "backtospace",
+    "version": "1.9.0",
+    "description": "Entry for the 2019 Js13k Games competition",
+    "main": "js/index.js",
+    "type": "module",
+    "module": "js/index.js",
+    "moduleDirectories": [
+        "node_modules",
+        "js"
+    ],
+    "scripts": {
+        "build": "tsc",
+        "build:watch": "tsc --watch"
+    },
+    "keywords": [
+        "wonderland-engine",
+        "js13k",
+        "sorskoot"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sorskoot/BackToSpace.git"
+    },
+    "author": "Sorskoot",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/sorskoot/BackToSpace/issues"
+    },
+    "homepage": "https://github.com/sorskoot/BackToSpace#readme",
+    "dependencies": {
+        "@sorskoot/wonderland-components": "github:sorskoot/SorskootWonderlandComponents",
+        "@wonderlandengine/api": "^1.1.1",
+        "@wonderlandengine/components": "^1.0.6",
+        "@zestymarket/wonderland-sdk": "^2.1.0",
+        "gl-matrix": "^3.4.3",
+        "howler": "^2.2.3",
+        "rxjs": "^7.8.1"
+    },
+    "devDependencies": {
+        "@types/howler": "^2.2.7",
+        "@types/jest": "^29.5.2",
+        "@typescript-eslint/eslint-plugin": "^6.3.0",
+        "@typescript-eslint/parser": "^6.3.0",
+        "eslint": "^8.46.0",
+        "eslint-plugin-etc": "^2.0.3",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
+    }
 }
