Update, fixes and ads

--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Scene Outline]
 Pos=3,29
-Size=382,663
+Size=234,712
 Collapsed=0
 DockId=0x00000003,0
 
@@ -9,8 +9,8 @@ Collapsed=0
 DockId=0x00000005
 
 [Window][Scene View]
-Pos=387,29
-Size=1070,663
+Pos=239,29
+Size=1195,712
 Collapsed=0
 DockId=0x00000005,0
 
@@ -19,16 +19,18 @@ Collapsed=0
 DockId=0x00000005
 
 [Window][Resources]
+Pos=239,29
+Size=1195,712
 Collapsed=0
-DockId=0x00000005
+DockId=0x00000005,1
 
 [Window][Preferences]
 Collapsed=0
 DockId=0x00000005
 
 [Window][Properties]
-Pos=1459,29
-Size=458,663
+Pos=1436,29
+Size=481,712
 Collapsed=0
 DockId=0x00000006,0
 
@@ -41,20 +43,20 @@ Collapsed=0
 DockId=0x00000006
 
 [Window][Project Settings]
-Pos=1459,29
-Size=458,663
+Pos=1436,29
+Size=481,712
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Asset Browser]
-Pos=3,694
-Size=956,286
+Pos=3,743
+Size=956,237
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Console]
-Pos=961,694
-Size=956,286
+Pos=961,743
+Size=956,237
 Collapsed=0
 DockId=0x00000009,0
 
@@ -62,7 +64,12 @@ DockId=0x00000009,0
 Collapsed=0
 DockId=0x00000005
 
+[Window][Resource Tree]
+Collapsed=0
+DockId=0x00000005
+
 [Window][Plugins]
+Size=460,646
 Collapsed=0
 DockId=0x00000006
 
@@ -87,18 +94,28 @@ Size=960,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=392,60
+Pos=244,60
 Size=502,32
 Collapsed=0
 
 [Window][##toolbar-right]
-Pos=1259,60
+Pos=1236,60
 Size=185,32
 Collapsed=0
 
 [Window][##legend]
-Pos=387,670
-Size=73,22
+Pos=239,719
+Size=50,22
+Collapsed=0
+
+[Window][Save changes?]
+Pos=809,432
+Size=302,144
+Collapsed=0
+
+[Window][Package Upgrade]
+Pos=660,432
+Size=600,144
 Collapsed=0
 
 [Table][0x769C0A53,2]
@@ -106,14 +123,98 @@ RefScale=16
 Column 0  Width=195
 Column 1  Weight=1.0000
 
+[Table][0x9F38BC32,8]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=32
+Column 2  Width=256
+Column 3  Width=50
+Column 4  Width=45
+Column 5  Width=79
+Column 6  Width=120
+Column 7  Width=332
+
+[Table][0xF9416A46,6]
+RefScale=16
+Column 0  Width=97
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=120
+Column 4  Width=31
+Column 5  Width=306
+
+[Table][0xC5956DCC,10]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=32
+Column 2  Width=220
+Column 3  Width=100
+Column 4  Width=120
+Column 5  Width=180
+Column 6  Width=21
+Column 7  Width=44
+Column 8  Width=150
+Column 9  Width=43
+
+[Table][0x4200049D,5]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=12
+Column 2  Width=256
+Column 3  Width=200
+Column 4  Width=431
+
+[Table][0xE19ACBA0,5]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=52
+Column 2  Width=256
+Column 3  Width=200
+Column 4  Width=405
+
+[Table][0x11D41861,5]
+RefScale=16
+Column 0  Width=15
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=120
+Column 4  Width=168
+
+[Table][0x9EF184B7,3]
+RefScale=16
+Column 0  Width=15
+Column 1  Width=256
+Column 2  Width=200
+
+[Table][0x04028DB2,4]
+RefScale=16
+Column 0  Width=12
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=424
+
+[Table][0xE9B50D30,4]
+RefScale=16
+Column 0  Width=12
+Column 1  Width=35
+Column 2  Width=164
+Column 3  Width=200
+
+[Table][0x4FF539D6,4]
+RefScale=16
+Column 0  Width=12
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=43
+
 [Docking][Data]
 DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=3,29 Size=1914,951 Split=Y
-  DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1920,704 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=383,704 Selected=0x57A23F0C
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1535,704 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1073,704 Selected=0x08AA43A5
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=460,704 Selected=0xF9AD2F9A
-  DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1920,303 Split=X
+  DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1920,712 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=234,704 Selected=0x57A23F0C
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1294,704 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=811,704 CentralNode=1 Selected=0x08AA43A5
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=481,704 Selected=0x199AB496
+  DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1920,237 Split=X
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=959,303 Selected=0x6F7CD859
     DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=959,303 Split=X
       DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=765,303 Selected=0x49278EEE
